--- a/11.4 amazon project clone/style.css
+++ b/11.4 amazon project clone/style.css
@@ -32,3 +32,18 @@
     border:  1.5px solid white;
 }
 
+/*box second */
+
+.add-first{
+ font-size: 0.85rem;
+ color: #cccccc;
+ 
+
+}
+
+.add-second{
+    font-size: 1rem;
+}
+.add-icon{
+    display: flex;
+}
