--- a/11.4 amazon project clone/style.css
+++ b/11.4 amazon project clone/style.css
@@ -10,6 +10,7 @@
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .nav-logo{
@@ -54,4 +55,35 @@
 
 .nav-search{
     display: flex;
+    justify-content: space-evenly;
+    background-color: red;
+    width: 620px;
+    height: 40px;
+    border-radius: 4px;
+}
+.search-select{
+    background-color: #f3f3f3;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+}
+
+.search-input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+
+.search-icon{
+    display: flex;
+    width: 40px;
+    justify-content: center;
+    align-items: center;
+font-size: 1.2rem;
+background-color: rgba(255, 191, 0, 0.91);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+
 }
