--- a/11.4 amazon project clone/style.css
+++ b/11.4 amazon project clone/style.css
@@ -81,9 +81,15 @@
     width: 40px;
     justify-content: center;
     align-items: center;
-font-size: 1.2rem;
-background-color: rgba(255, 191, 0, 0.91);
+    font-size: 1.2rem;
+    background-color: #febd68;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+    color: #0F1111;
+}
 
+/* box 4 */
+
+span{
+    
 }
