--- a/11.4 amazon project clone/style.css
+++ b/11.4 amazon project clone/style.css
@@ -88,8 +88,22 @@
     color: #0F1111;
 }
 
+.nav-search:hover{
+    border: 2px solid orange;
+}
 /* box 4 */
 
 span{
-    
+    font-size: 0.7rem;
+}
+.nav-second{
+    font-weight: 700;
+}
+/* box 5 */
+.nav-cart i {
+ font-size: 30px;
+}
+.nav-cart{
+    font-size: 0.90rem;
+    font-weight: 700;
 }
