--- a/11.4 amazon project clone/style.css
+++ b/11.4 amazon project clone/style.css
@@ -131,10 +131,16 @@ span{
 
 .hero-section{
     background-image: url(hero_image.jpg);
-    /* background-size: cover; */
+    /* background-size: cover;
     height: 700px;
     width: 1350px;
+    background-size: cover; */
+    height: 350px;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
 }
 
 .hero-message-section{
@@ -145,9 +151,29 @@ span{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 .hero-message-section a{
     color: #007185;
     
+}
+
+/* shop section */
+.shop-section{
+    display: flex; 
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+   
+    
+}
+.box{
+    height: 400px;
+    border: 2px solid black;
+    width: 23%;
+    background-color: white;
+}
+
+.box-image{
+    height: 300px;
 }
