updated in shoping section

--- a/11.4 amazon project clone/style.css
+++ b/11.4 amazon project clone/style.css
@@ -169,15 +169,21 @@ span{
 }
 .box{
     height: 400px;
-    border: 2px solid black;
+    /* border: 2px solid blac; */
     width: 23%;
     background-color: white;
     padding: 20px 0px 15px;
+    margin-top: 15px;
 }
 
 .box-image{
     height: 300px;
-    margin-left: 10px;
-    margin-left: 10px;
+    background-repeat: no-repeat;
     
+
+    
+}
+.box-content{
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
